[gd_scene load_steps=33 format=3 uid="uid://6uwyyegm8dex"]

[ext_resource type="Script" uid="uid://uj51gsxamwvf" path="res://Scenes/characters/player/player.gd" id="1_nwck2"]
[ext_resource type="Texture2D" uid="uid://btqdn6aihlfui" path="res://Assets/Visuals/Characters/player/plYER_Attack (1).webp" id="2_a6wmr"]
[ext_resource type="Texture2D" uid="uid://dg5sk5ili666" path="res://Assets/Visuals/Characters/player/playerhit.webp" id="3_fgfa2"]
[ext_resource type="Texture2D" uid="uid://v5d36ld6et7j" path="res://Assets/Visuals/Characters/player/walkplayer.webp" id="4_a6wmr"]
[ext_resource type="Texture2D" uid="uid://c1p5a4d07mvjh" path="res://Assets/Visuals/Characters/player/idle.webp" id="4_ycnf8"]
[ext_resource type="PackedScene" uid="uid://3aw0grq3bkh5" path="res://Scenes/Entities/Inventory/inventory.tscn" id="6_fgfa2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f88ju"]
radius = 58.0
height = 228.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kewe2"]
atlas = ExtResource("2_a6wmr")
region = Rect2(0, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnmwl"]
atlas = ExtResource("2_a6wmr")
region = Rect2(370, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbnd7"]
atlas = ExtResource("2_a6wmr")
region = Rect2(740, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_o54f6"]
atlas = ExtResource("2_a6wmr")
region = Rect2(1110, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl7bd"]
atlas = ExtResource("2_a6wmr")
region = Rect2(1480, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdi5o"]
atlas = ExtResource("3_fgfa2")
region = Rect2(0, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qqet"]
atlas = ExtResource("3_fgfa2")
region = Rect2(370, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivh5d"]
atlas = ExtResource("3_fgfa2")
region = Rect2(740, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruqtq"]
atlas = ExtResource("4_ycnf8")
region = Rect2(0, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptemm"]
atlas = ExtResource("4_ycnf8")
region = Rect2(370, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_khqjw"]
atlas = ExtResource("4_ycnf8")
region = Rect2(740, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_lausg"]
atlas = ExtResource("4_ycnf8")
region = Rect2(1110, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn780"]
atlas = ExtResource("4_ycnf8")
region = Rect2(1480, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_de88o"]
atlas = ExtResource("4_a6wmr")
region = Rect2(370, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4crx"]
atlas = ExtResource("4_a6wmr")
region = Rect2(740, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_tco2g"]
atlas = ExtResource("4_a6wmr")
region = Rect2(1110, 0, 370, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua65r"]
atlas = ExtResource("4_a6wmr")
region = Rect2(1480, 0, 370, 371)

[sub_resource type="SpriteFrames" id="SpriteFrames_m2a7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kewe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnmwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbnd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o54f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl7bd")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdi5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qqet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivh5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivh5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qqet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdi5o")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruqtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptemm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khqjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lausg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn780")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_de88o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4crx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tco2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua65r")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_v83h7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurt_zone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fgfa2"]
resource_name = "attack"
length = 0.7333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.46666667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurt_zone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.106957644, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_a6wmr"]
resource_name = "die"
length = 0.80000335
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.36666667, 0.5965885),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2]
}

[sub_resource type="Animation" id="Animation_3gb3b"]
resource_name = "idle"
length = 2.40001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.9, 1.2, 1.5, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 4]
}

[sub_resource type="Animation" id="Animation_ycnf8"]
resource_name = "walk"
length = 0.50000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a6wmr"]
_data = {
&"RESET": SubResource("Animation_v83h7"),
&"attack": SubResource("Animation_fgfa2"),
&"die": SubResource("Animation_a6wmr"),
&"idle": SubResource("Animation_3gb3b"),
&"walk": SubResource("Animation_ycnf8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a6wmr"]
radius = 54.0
height = 242.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_nwck2")
health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-4, 18)
shape = SubResource("CapsuleShape2D_f88ju")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_m2a7q")
animation = &"idle"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a6wmr")
}

[node name="HealthLabel" type="Label" parent="."]
visible = false
offset_left = -16.0
offset_top = -144.0
offset_right = 24.0
offset_bottom = -99.0
theme_override_font_sizes/font_size = 32
text = "99"

[node name="StateLabel" type="Label" parent="."]
offset_left = -24.0
offset_top = -184.0
offset_right = 33.0
offset_bottom = -139.0
theme_override_font_sizes/font_size = 32
text = "Idle"

[node name="hurt_zone" type="Area2D" parent="."]
position = Vector2(136, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_zone"]
shape = SubResource("CapsuleShape2D_a6wmr")
disabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("6_fgfa2")]

[connection signal="body_entered" from="hurt_zone" to="." method="_on_hurt_zone_body_entered"]
